src/c_api.h

typedef void * rwkvmobile_runtime_t;
struct token_ids {
    int * ids;
    int len;
};
struct response_buffer {
    char * content;
    int length;
    int eos_found;
};
struct response_buffer_batch {
    char ** contents;
    int * lengths;
    int * eos_founds;
    int batch_size;
};
struct batch_tokens_count {
    int * counts;
    int batch_size;
};
int rwkvmobile_runtime_eval_chat_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char ** inputs,
    const int num_inputs, const int max_tokens, void (*callback)(const char *, const int, const char *),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
int rwkvmobile_runtime_gen_completion_async(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);
int rwkvmobile_runtime_gen_completion_batch_async(rwkvmobile_runtime_t runtime, int model_id, const char ** prompts, const int batch_size, const int max_tokens, const int stop_code, void (*callback_batch)(const int, const char **, const int*, const char **), int disable_cache);
int rwkvmobile_runtime_eval_chat_batch_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char *** inputs, const int * num_inputs,
    const int batch_size, const int max_tokens, void (*callback_batch)(const int, const char **, const int*, const char **),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
int rwkvmobile_runtime_gen_completion(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);
int rwkvmobile_runtime_release_whisper_encoder(rwkvmobile_runtime_t runtime, int model_id);
int rwkvmobile_runtime_set_audio_prompt(rwkvmobile_runtime_t runtime, int model_id, const char * audio_path);
int rwkvmobile_runtime_set_token_banned(rwkvmobile_runtime_t runtime, int model_id, const int * token_banned, int token_banned_len);
int rwkvmobile_runtime_set_eos_token(rwkvmobile_runtime_t runtime, int model_id, const char * eos_token);
int rwkvmobile_runtime_set_bos_token(rwkvmobile_runtime_t runtime, int model_id, const char * bos_token);
int rwkvmobile_runtime_set_user_role(rwkvmobile_runtime_t runtime, int model_id, const char * user_role);
int rwkvmobile_runtime_set_space_after_roles(rwkvmobile_runtime_t runtime, int model_id, int space_after_roles);
int rwkvmobile_runtime_set_response_role(rwkvmobile_runtime_t runtime, int model_id, const char * response_role);
int rwkvmobile_runtime_set_thinking_token(rwkvmobile_runtime_t runtime, int model_id, const char * thinking_token);
struct response_buffer rwkvmobile_runtime_get_response_buffer_content(rwkvmobile_runtime_t runtime, int model_id);
struct response_buffer_batch rwkvmobile_runtime_get_response_buffer_content_batch(rwkvmobile_runtime_t runtime, int model_id);
void rwkvmobile_runtime_free_response_buffer(struct response_buffer buffer);
void rwkvmobile_runtime_free_response_buffer_batch(struct response_buffer_batch buffer);
struct token_ids rwkvmobile_runtime_get_response_buffer_ids(rwkvmobile_runtime_t runtime, int model_id);
int rwkvmobile_runtime_get_response_buffer_tokens_count(rwkvmobile_runtime_t runtime, int model_id);
struct batch_tokens_count rwkvmobile_runtime_get_response_buffer_tokens_count_batch(rwkvmobile_runtime_t runtime, int model_id);
int rwkvmobile_runtime_calculate_tokens_count_from_messages(rwkvmobile_runtime_t runtime, int model_id, const char ** inputs, const int num_inputs);
int rwkvmobile_runtime_calculate_tokens_count_from_text(rwkvmobile_runtime_t runtime, int model_id, const char * text);
void rwkvmobile_runtime_free_token_ids(struct token_ids ids);
// sparktts
int rwkvmobile_runtime_sparktts_load_models(rwkvmobile_runtime_t runtime, const char * wav2vec2_path, const char * bicodec_tokenizer_path, const char * bicodec_detokenizer_path);
int rwkvmobile_runtime_sparktts_release_models(rwkvmobile_runtime_t runtime);