examples/flutter/ffigen/rwkv_mobile.dart


int rwkvmobile_runtime_release_whisper_encoder(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_release_whisper_encoder(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_release_whisper_encoderPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_release_whisper_encoder');
late final _rwkvmobile_runtime_release_whisper_encoder = _rwkvmobile_runtime_release_whisper_encoderPtr.asFunction<int Function(rwkvmobile_runtime_t , int )>();

int rwkvmobile_runtime_set_audio_prompt(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> audio_path,
) {
  return _rwkvmobile_runtime_set_audio_prompt(runtime,
model_id,
audio_path,
);
}

late final _rwkvmobile_runtime_set_audio_promptPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_set_audio_prompt');
late final _rwkvmobile_runtime_set_audio_prompt = _rwkvmobile_runtime_set_audio_promptPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_set_token_banned(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Int> token_banned,
int token_banned_len,
) {
  return _rwkvmobile_runtime_set_token_banned(runtime,
model_id,
token_banned,
token_banned_len,
);
}

late final _rwkvmobile_runtime_set_token_bannedPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Int> , ffi.Int )>>('rwkvmobile_runtime_set_token_banned');
late final _rwkvmobile_runtime_set_token_banned = _rwkvmobile_runtime_set_token_bannedPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Int> , int )>();

int rwkvmobile_runtime_set_eos_token(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> eos_token,
) {
  return _rwkvmobile_runtime_set_eos_token(runtime,
model_id,
eos_token,
);
}

late final _rwkvmobile_runtime_set_eos_tokenPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_set_eos_token');
late final _rwkvmobile_runtime_set_eos_token = _rwkvmobile_runtime_set_eos_tokenPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_set_bos_token(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> bos_token,
) {
  return _rwkvmobile_runtime_set_bos_token(runtime,
model_id,
bos_token,
);
}

late final _rwkvmobile_runtime_set_bos_tokenPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_set_bos_token');
late final _rwkvmobile_runtime_set_bos_token = _rwkvmobile_runtime_set_bos_tokenPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_set_user_role(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> user_role,
) {
  return _rwkvmobile_runtime_set_user_role(runtime,
model_id,
user_role,
);
}

late final _rwkvmobile_runtime_set_user_rolePtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_set_user_role');
late final _rwkvmobile_runtime_set_user_role = _rwkvmobile_runtime_set_user_rolePtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_set_space_after_roles(rwkvmobile_runtime_t runtime,
int model_id,
int space_after_roles,
) {
  return _rwkvmobile_runtime_set_space_after_roles(runtime,
model_id,
space_after_roles,
);
}

late final _rwkvmobile_runtime_set_space_after_rolesPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Int )>>('rwkvmobile_runtime_set_space_after_roles');
late final _rwkvmobile_runtime_set_space_after_roles = _rwkvmobile_runtime_set_space_after_rolesPtr.asFunction<int Function(rwkvmobile_runtime_t , int , int )>();

int rwkvmobile_runtime_set_response_role(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> response_role,
) {
  return _rwkvmobile_runtime_set_response_role(runtime,
model_id,
response_role,
);
}

late final _rwkvmobile_runtime_set_response_rolePtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_set_response_role');
late final _rwkvmobile_runtime_set_response_role = _rwkvmobile_runtime_set_response_rolePtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_set_thinking_token(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> thinking_token,
) {
  return _rwkvmobile_runtime_set_thinking_token(runtime,
model_id,
thinking_token,
);
}

late final _rwkvmobile_runtime_set_thinking_tokenPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_set_thinking_token');
late final _rwkvmobile_runtime_set_thinking_token = _rwkvmobile_runtime_set_thinking_tokenPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

response_buffer rwkvmobile_runtime_get_response_buffer_content(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_response_buffer_content(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_response_buffer_contentPtr = _lookup<
    ffi.NativeFunction<response_buffer Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_response_buffer_content');
late final _rwkvmobile_runtime_get_response_buffer_content = _rwkvmobile_runtime_get_response_buffer_contentPtr.asFunction<response_buffer Function(rwkvmobile_runtime_t , int )>();

response_buffer_batch rwkvmobile_runtime_get_response_buffer_content_batch(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_response_buffer_content_batch(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_response_buffer_content_batchPtr = _lookup<
    ffi.NativeFunction<response_buffer_batch Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_response_buffer_content_batch');
late final _rwkvmobile_runtime_get_response_buffer_content_batch = _rwkvmobile_runtime_get_response_buffer_content_batchPtr.asFunction<response_buffer_batch Function(rwkvmobile_runtime_t , int )>();

void rwkvmobile_runtime_free_response_buffer(response_buffer buffer,
) {
  return _rwkvmobile_runtime_free_response_buffer(buffer,
);
}

late final _rwkvmobile_runtime_free_response_bufferPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(response_buffer )>>('rwkvmobile_runtime_free_response_buffer');
late final _rwkvmobile_runtime_free_response_buffer = _rwkvmobile_runtime_free_response_bufferPtr.asFunction<void Function(response_buffer )>();

void rwkvmobile_runtime_free_response_buffer_batch(response_buffer_batch buffer,
) {
  return _rwkvmobile_runtime_free_response_buffer_batch(buffer,
);
}

late final _rwkvmobile_runtime_free_response_buffer_batchPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(response_buffer_batch )>>('rwkvmobile_runtime_free_response_buffer_batch');
late final _rwkvmobile_runtime_free_response_buffer_batch = _rwkvmobile_runtime_free_response_buffer_batchPtr.asFunction<void Function(response_buffer_batch )>();

token_ids rwkvmobile_runtime_get_response_buffer_ids(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_response_buffer_ids(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_response_buffer_idsPtr = _lookup<
    ffi.NativeFunction<token_ids Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_response_buffer_ids');
late final _rwkvmobile_runtime_get_response_buffer_ids = _rwkvmobile_runtime_get_response_buffer_idsPtr.asFunction<token_ids Function(rwkvmobile_runtime_t , int )>();

int rwkvmobile_runtime_get_response_buffer_tokens_count(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_response_buffer_tokens_count(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_response_buffer_tokens_countPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_response_buffer_tokens_count');
late final _rwkvmobile_runtime_get_response_buffer_tokens_count = _rwkvmobile_runtime_get_response_buffer_tokens_countPtr.asFunction<int Function(rwkvmobile_runtime_t , int )>();

batch_tokens_count rwkvmobile_runtime_get_response_buffer_tokens_count_batch(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_response_buffer_tokens_count_batch(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_response_buffer_tokens_count_batchPtr = _lookup<
    ffi.NativeFunction<batch_tokens_count Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_response_buffer_tokens_count_batch');
late final _rwkvmobile_runtime_get_response_buffer_tokens_count_batch = _rwkvmobile_runtime_get_response_buffer_tokens_count_batchPtr.asFunction<batch_tokens_count Function(rwkvmobile_runtime_t , int )>();

int rwkvmobile_runtime_calculate_tokens_count_from_messages(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Pointer<ffi.Char>> inputs,
int num_inputs,
) {
  return _rwkvmobile_runtime_calculate_tokens_count_from_messages(runtime,
model_id,
inputs,
num_inputs,
);
}

late final _rwkvmobile_runtime_calculate_tokens_count_from_messagesPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Char>> , ffi.Int )>>('rwkvmobile_runtime_calculate_tokens_count_from_messages');
late final _rwkvmobile_runtime_calculate_tokens_count_from_messages = _rwkvmobile_runtime_calculate_tokens_count_from_messagesPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Pointer<ffi.Char>> , int )>();

int rwkvmobile_runtime_calculate_tokens_count_from_text(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> text,
) {
  return _rwkvmobile_runtime_calculate_tokens_count_from_text(runtime,
model_id,
text,
);
}

late final _rwkvmobile_runtime_calculate_tokens_count_from_textPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_calculate_tokens_count_from_text');
late final _rwkvmobile_runtime_calculate_tokens_count_from_text = _rwkvmobile_runtime_calculate_tokens_count_from_textPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

void rwkvmobile_runtime_free_token_ids(token_ids ids,
) {
  return _rwkvmobile_runtime_free_token_ids(ids,
);
}

late final _rwkvmobile_runtime_free_token_idsPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(token_ids )>>('rwkvmobile_runtime_free_token_ids');
late final _rwkvmobile_runtime_free_token_ids = _rwkvmobile_runtime_free_token_idsPtr.asFunction<void Function(token_ids )>();

int rwkvmobile_runtime_sparktts_load_models(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Char> wav2vec2_path,
ffi.Pointer<ffi.Char> bicodec_tokenizer_path,
ffi.Pointer<ffi.Char> bicodec_detokenizer_path,
) {
  return _rwkvmobile_runtime_sparktts_load_models(runtime,
wav2vec2_path,
bicodec_tokenizer_path,
bicodec_detokenizer_path,
);
}

late final _rwkvmobile_runtime_sparktts_load_modelsPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_sparktts_load_models');
late final _rwkvmobile_runtime_sparktts_load_models = _rwkvmobile_runtime_sparktts_load_modelsPtr.asFunction<int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_sparktts_release_models(rwkvmobile_runtime_t runtime,
) {
  return _rwkvmobile_runtime_sparktts_release_models(runtime,
);
}
